--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "project-nodefun",
   "version": "1.0.0",
   "description": "node sandbox",
-  "main": "web.js",
+  "main": "express.js",
   "scripts": {
-    "dev": "nodemon web.js",
-    "start": "node web.js"
+    "dev": "nodemon express.js",
+    "start": "node express.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "dependencies": {
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "uuid": "^8.3.2"
   }
 }
